--- a/config/content.htm
+++ b/config/content.htm
@@ -906,7 +906,9 @@ draw()
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <p>w16_exam2</p><h3>w16_exam2</h3>
+<p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/eada18a0a87dbe384e2da225dd20571b/raw/ac1de66cc6d7ff9691b060b4b09204704111070c/w16_exam2">程式碼</a></p>
 <p><canvas height="600" id="my_canvas" style="border: 1px solid black;" width="900"></canvas></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6H2o8hAErxc" width="560"></iframe></p>
 <p></p>
 <p></p>
 <!-- 导入 Brython 库 -->
