--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -613,6 +613,7 @@ draw_circles(x1, y1, radius, x2, y2, radius, x3, y3, radius)
         move_timer = timer.set_interval(move, 100)
     
 </script><h3>w16_exam1</h3>
+<p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/26dbc77fbffa1f3f23f0c33fa593c81d/raw/08ea30e68236f3c73cabc48f2b5bc078edb18703/HW%25202%2520Exam">程式碼</a></p>
 <p><canvas height="500" id="canvas" style="border: 1px solid black;" width="900"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/KFTJjCPHz4E" width="560"></iframe></canvas></p>
 <p></p>
 <p></p>
@@ -905,6 +906,7 @@ draw()
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <p>w16_exam2</p><h3>w16_exam2</h3>
+<p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/eada18a0a87dbe384e2da225dd20571b/raw/ac1de66cc6d7ff9691b060b4b09204704111070c/w16_exam2">程式碼</a></p>
 <p><canvas height="600" id="my_canvas" style="border: 1px solid black;" width="900"></canvas></p>
 <p></p>
 <p></p>
