--- a/config/content.htm
+++ b/config/content.htm
@@ -1004,7 +1004,9 @@ for x1, y1, x2, y2 in y_coords:
 <p></p>
 <p></p>
 <h3>w16_exam3</h3>
+<p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/3bb229f5203d8b14e3376bc70bc2d14e/raw/36b6b98edfdc2b44f3d5db210d01cf6104e1617d/w16_exam3">程式碼</a></p>
 <p><canvas height="600" id="canvas" style="border: 1px solid black;" width="1000"></canvas></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/5T3cPJ3oyRw" width="560"></iframe></p>
 <!-- 导入 Brython 库 -->
 <script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython_stdlib.js"></script>
