--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -908,6 +908,7 @@ draw()
 <p>w16_exam2</p><h3>w16_exam2</h3>
 <p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/eada18a0a87dbe384e2da225dd20571b/raw/ac1de66cc6d7ff9691b060b4b09204704111070c/w16_exam2">程式碼</a></p>
 <p><canvas height="600" id="my_canvas" style="border: 1px solid black;" width="900"></canvas></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6H2o8hAErxc" width="560"></iframe></p>
 <p></p>
 <p></p>
 <!-- 导入 Brython 库 -->
@@ -1003,6 +1004,7 @@ for x1, y1, x2, y2 in y_coords:
 <p></p>
 <p></p>
 <h3>w16_exam3</h3>
+<p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/3bb229f5203d8b14e3376bc70bc2d14e/raw/36b6b98edfdc2b44f3d5db210d01cf6104e1617d/w16_exam3">程式碼</a></p>
 <p><canvas height="600" id="canvas" style="border: 1px solid black;" width="1000"></canvas></p>
 <!-- 导入 Brython 库 -->
 <script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script>
