--- a/content/w16_exam3.html
+++ b/content/w16_exam3.html
@@ -2,7 +2,7 @@
         <head>
         <title>cp_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,10 +141,157 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW 3 << <a href='HW 3.html'>Previous</a> <a href='w16_exam2.html'>Next</a> >> w16_exam2<br /><h1>HW 3 Exam</h1>
-<p>每六人為一組進行協同程式練習</p>
-<p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
-<p>w16_exam2</p><br />HW 3 << <a href='HW 3.html'>Previous</a> <a href='w16_exam2.html'>Next</a> >> w16_exam2</div>
+    <div id="tipue_search_content">HW 4 Exam << <a href='HW 4 Exam.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>w16_exam3</h1>
+<p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/3bb229f5203d8b14e3376bc70bc2d14e/raw/36b6b98edfdc2b44f3d5db210d01cf6104e1617d/w16_exam3">程式碼</a></p>
+<p><canvas height="600" id="canvas" style="border: 1px solid black;" width="1000"></canvas></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/5T3cPJ3oyRw" width="560"></iframe></p>
+<!-- 导入 Brython 库 -->
+<script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython_stdlib.js"></script>
+<!-- 启动 Brython -->
+<script>
+window.onload = function () {
+    brython();
+};
+</script>
+<script type="text/python">
+import math
+from browser import document, html
+
+# 初始化 HTML，确保 canvas 元素存在
+def setup_canvas():
+    if not document.querySelector("#canvas"):
+        canvas = html.CANVAS(id="canvas", width=1000, height=600)
+        document <= canvas
+
+setup_canvas()
+
+# Set up canvas
+canvas = document["canvas"]
+ctx = canvas.getContext("2d")
+
+# Set origin (31, 13)
+origin_x, origin_y = 31, 13
+ctx.font = "12px Arial"  # 缩小字体大小
+ctx.fillStyle = "red"
+ctx.fillText("(31, 13)", origin_x + 10, origin_y - 8)  # 在红点的右上方标出坐标
+
+# Draw X
+ctx.beginPath()
+ctx.moveTo(origin_x, origin_y)
+ctx.lineTo(180, origin_y)
+ctx.moveTo(260, origin_y)
+ctx.lineTo(420, origin_y)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(100, 90)
+ctx.lineTo(340, 90)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(origin_x, 150)
+ctx.lineTo(180, 150)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(100, 210)
+ctx.lineTo(340, 210)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(180, 270)
+ctx.lineTo(260, 270)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(origin_x, 330)
+ctx.lineTo(180, 330)
+ctx.moveTo(260, 330)
+ctx.lineTo(420, 330)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+# Draw Y
+ctx.beginPath()
+ctx.moveTo(origin_x, origin_y)
+ctx.lineTo(origin_x, 330)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(100, 210)
+ctx.lineTo(100, 270)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(180, 90)
+ctx.lineTo(180, 150)
+ctx.moveTo(180, 270)
+ctx.lineTo(180, 330)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(260, 150)
+ctx.lineTo(260, 210)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(340, 90)
+ctx.lineTo(340, 150)
+ctx.moveTo(340, 210)
+ctx.lineTo(340, 330)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+ctx.beginPath()
+ctx.moveTo(420, origin_y)
+ctx.lineTo(420, 330)
+ctx.strokeStyle = "blue"
+ctx.lineWidth = 1.2
+ctx.stroke()
+
+# Draw Path
+ctx.beginPath()
+ctx.moveTo(220, origin_y)
+ctx.lineTo(220, 60)
+ctx.lineTo(380, 60)
+ctx.lineTo(380, 180)
+ctx.lineTo(300, 180)
+ctx.lineTo(300, 130)
+ctx.lineTo(220, 130)
+ctx.lineTo(220, 180)
+ctx.lineTo(60, 180)
+ctx.lineTo(60, 320)
+ctx.lineTo(140, 320)
+ctx.lineTo(140, 240)
+ctx.lineTo(300, 240)
+ctx.lineTo(300, 320)
+ctx.lineTo(220, 320)
+ctx.lineTo(220, 330)
+ctx.strokeStyle = "red"
+ctx.lineWidth = 1.2
+ctx.stroke()
+</script><br />HW 4 Exam << <a href='HW 4 Exam.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report</div>
         
     <!-- footer -->
       <div class="container">
