--- a/config/content.htm
+++ b/config/content.htm
@@ -1156,14 +1156,13 @@ ctx.stroke()
 </script><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (20%)</p>
 <p>期末口頭專題報告影片:</p>
-<p style="padding-left: 30px;">......</p>
+<p style="padding-left: 30px;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/noUbvQGO4OQ" width="560"></iframe></p>
 <p>期末書面專題報告檔案 (pdf):</p>
-<p style="padding-left: 30px;">......</p>
+<p>    ......</p>
 <p>電腦輔助設計與實習課程總結心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末報告自評成績:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cp2024 自評表單中.</p>
-<h1>Brython</h1>
+<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cp2024 自評表單中.</p><h1>Brython</h1>
 <p>從 1 累加到 100:</p>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
