--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1006,6 +1006,7 @@ for x1, y1, x2, y2 in y_coords:
 <h3>w16_exam3</h3>
 <p><a href="https://mdecp2024.github.io/hw-LYX41323113/content/Brython.html?src=https://gist.githubusercontent.com/LYX41323113/3bb229f5203d8b14e3376bc70bc2d14e/raw/36b6b98edfdc2b44f3d5db210d01cf6104e1617d/w16_exam3">程式碼</a></p>
 <p><canvas height="600" id="canvas" style="border: 1px solid black;" width="1000"></canvas></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/5T3cPJ3oyRw" width="560"></iframe></p>
 <!-- 导入 Brython 库 -->
 <script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython_stdlib.js"></script>
@@ -1155,14 +1156,13 @@ ctx.stroke()
 </script><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (20%)</p>
 <p>期末口頭專題報告影片:</p>
-<p style="padding-left: 30px;">......</p>
+<p style="padding-left: 30px;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/noUbvQGO4OQ" width="560"></iframe></p>
 <p>期末書面專題報告檔案 (pdf):</p>
-<p style="padding-left: 30px;">......</p>
+<p style="padding-left: 30px;"><a href="file:///C:/Users/ASUS-NB/Desktop/%E8%A8%88%E7%AE%97%E6%A9%9F%E7%A8%8B%E5%BC%8F.pdf">pdf</a></p>
 <p>電腦輔助設計與實習課程總結心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末報告自評成績:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cp2024 自評表單中.</p>
-<h1>Brython</h1>
+<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cp2024 自評表單中.</p><h1>Brython</h1>
 <p>從 1 累加到 100:</p>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
