--- a/config/content.htm
+++ b/config/content.htm
@@ -1158,9 +1158,9 @@ ctx.stroke()
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/noUbvQGO4OQ" width="560"></iframe></p>
 <p>期末書面專題報告檔案 (pdf):</p>
-<p>    ......</p>
+<p>    <iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/noUbvQGO4OQ" width="560"></iframe></p>
 <p>電腦輔助設計與實習課程總結心得:</p>
-<p style="padding-left: 30px;">......</p>
+<p style="padding-left: 30px;">因為第一次學程式，所以基礎的都不會，只能盡力用ai來完成作業和考試，看來只能之後再惡補了，目前基礎都還不太行</p>
 <p>期末報告自評成績:</p>
 <p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cp2024 自評表單中.</p><h1>Brython</h1>
 <p>從 1 累加到 100:</p>
